[package]
name = "roboto"
version = "0.1.0"
edition = "2021"
description = "Parse and use Robots.txt files"
license = "MIT"
repository = "https://github.com/alexrudy/roboto"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1"

[dev-dependencies]
indoc = "2"
